@@ -1,6 +1,6 @@
 % File src/library/stats/man/printCoefmat.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2016 R Core Team
+% Copyright 1995-2017 R Core Team
 % Distributed under GPL 2 or later
 
 \name{printCoefmat}
@@ -20,8 +20,8 @@ printCoefmat(x, digits = max(3, getOption("digits") - 2),
              dig.tst = max(1, min(5, digits - 1)),
              cs.ind = 1L:k, tst.ind = k + 1L,
              zap.ind = integer(), P.values = NULL,
-             has.Pvalue = nc >= 4L &&
-                          substr(colnames(x)[nc], 1L, 3L) \%in\% c("Pr(", "p-v"),
+             has.Pvalue = nc >= 4L && length(cn <- colnames(x)) &&
+                          substr(cn[nc], 1L, 3L) \%in\% c("Pr(", "p-v"),
              eps.Pvalue = .Machine$double.eps,
              na.print = "NA", \dots)
 }
